--- a/a1/index.html
+++ b/a1/index.html
@@ -77,7 +77,7 @@
 
 				<!-- Professional Photo auto Hides for Small Screen -->
 				<div class="col-12 col-xl-6 text-center align-self-end d-none d-xl-block">
-					<img src="https://scontent.fmnl13-2.fna.fbcdn.net/v/t31.18172-8/1519832_10201379039917956_8266969761302060878_o.jpg?_nc_cat=108&ccb=1-7&_nc_sid=a83260&_nc_eui2=AeE0IFs1zfgml3Nx3Me7BMplblYTvGYs83puVhO8ZizzepCZtyi5XJwjIsQDPbdJdrxGC7_7eKVNZ-UunY5rDlnh&_nc_ohc=kbRXExKM_20AX_JC4rh&_nc_ht=scontent.fmnl13-2.fna&oh=00_AT9bLioybHrd9E8eU4Zq9rIN4nTr_ELbCYYnd_I4-3DjDw&oe=631B57C4" class="img-fluid">
+					<img src="https://scontent.fmnl13-2.fna.fbcdn.net/v/t31.18172-8/1519832_10201379039917956_8266969761302060878_o.jpg?_nc_cat=108&ccb=1-7&_nc_sid=a83260&_nc_eui2=AeE0IFs1zfgml3Nx3Me7BMplblYTvGYs83puVhO8ZizzepCZtyi5XJwjIsQDPbdJdrxGC7_7eKVNZ-UunY5rDlnh&_nc_ohc=kbRXExKM_20AX_JC4rh&_nc_ht=scontent.fmnl13-2.fna&oh=00_AT9bLioybHrd9E8eU4Zq9rIN4nTr_ELbCYYnd_I4-3DjDw&oe=631B57C4" class="img-fluid" width="500px">
 				</div>
 
 				<div class="col-12 col-xl-6 align-self-center">
@@ -85,7 +85,7 @@
 					<!-- About Me Text -->
 					<h1 class="display-3 mb-xl-5 d-inline-block border-bottom">ABOUT ME</h1>
 
-					<img src="./images/photo.jpg" class="img-fluid d-block d-none d-lg-block d-xl-none rounded-circle my-lg-3 mx-auto my-5">
+					<img src="https://scontent.fmnl13-2.fna.fbcdn.net/v/t31.18172-8/1519832_10201379039917956_8266969761302060878_o.jpg?_nc_cat=108&ccb=1-7&_nc_sid=a83260&_nc_eui2=AeE0IFs1zfgml3Nx3Me7BMplblYTvGYs83puVhO8ZizzepCZtyi5XJwjIsQDPbdJdrxGC7_7eKVNZ-UunY5rDlnh&_nc_ohc=kbRXExKM_20AX_JC4rh&_nc_ht=scontent.fmnl13-2.fna&oh=00_AT9bLioybHrd9E8eU4Zq9rIN4nTr_ELbCYYnd_I4-3DjDw&oe=631B57C4" class="img-fluid d-block d-none d-lg-block d-xl-none my-lg-3 mx-auto my-5">
 
 					<p class="lead font-italic text-justify">
 						Do you want a <span class="font-weight-bold">Creative, Motivated and Professional Freelancer?</span>
@@ -141,7 +141,7 @@
 					  <!-- Card Body -->
 					  <a class="text-decoration-none text-info" href="" target="_blank">
 					  <div class="card-body mb-2 mb-lg-3">
-					    <h5 class="card-title text-justify">Website Icons</h5>
+					    <h5 class="card-title btn btn-danger">Website Icons</h5>
 					    <p class="card-text">Created a website Icons using the latest technology and trend (HTML 5, CSS 3, Javascript, etc.)</p>
 					  </div>
 					</div>
@@ -176,7 +176,7 @@
 
 					  <a class="text-decoration-none text-info" href="" target="_blank">
 					  <div class="card-body mb-2 mb-lg-3">
-					    <h5 class="card-title">Graphic Design Projects</h5>
+					    <h5 class="card-title btn btn-danger">Graphic Design Projects</h5>
 					    <p class="card-text text-justify">Created a logo design, brochure, banner, and social media publication materials for different businesses.</p>
 					  </div>
 					</div>
@@ -211,7 +211,7 @@
 
 					  <a class="text-decoration-none text-info" href="" target="_blank">
 					  <div class="card-body mb-2 mb-lg-3">
-					    <h5 class="card-title">Creative Icons</h5>
+					    <h5 class="card-title btn btn-danger">Creative Icons </h5> 
 					    <p class="card-text text-justify">Created a Creative Icons using the latest technology and trend (HTML 5, CSS 3, Javascript, etc.)).</p>
 					  </div>
 					</div>
