Update Folder Structure

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 					<img src="https://scontent.fmnl13-2.fna.fbcdn.net/v/t31.18172-8/1519832_10201379039917956_8266969761302060878_o.jpg?_nc_cat=108&ccb=1-7&_nc_sid=a83260&_nc_eui2=AeE0IFs1zfgml3Nx3Me7BMplblYTvGYs83puVhO8ZizzepCZtyi5XJwjIsQDPbdJdrxGC7_7eKVNZ-UunY5rDlnh&_nc_ohc=kbRXExKM_20AX_JC4rh&_nc_ht=scontent.fmnl13-2.fna&oh=00_AT9bLioybHrd9E8eU4Zq9rIN4nTr_ELbCYYnd_I4-3DjDw&oe=631B57C4" class="img-fluid d-block d-none d-lg-block d-xl-none my-lg-3 mx-auto my-5">
 
 					<p class="lead font-italic text-justify">
-						Do you want a <span class="font-weight-bold">Creative, Motivated and Professional Freelancer?</span>
+						A <span class="font-weight-bold">Creative, Motivated and Professional Freelancer?</span>
 					</p>
 					<p class="lead text-justify">
 						I am <span class="font-weight-bold">Lorely Jorgia D. Casera</span>, an <span class="font-italic">Aspiring Web Developer</span>. I can take your idea and build it from the ground up. This includes everything from icon creation and management,  I am available for short-term and long-term contract projects, but perform my work after-hours. This means your work will be done during the night or weekends, and it will be completed in a timely, professional manner.
@@ -142,7 +142,7 @@
 					  <a class="text-decoration-none text-info" href="" target="_blank">
 					  <div class="card-body mb-2 mb-lg-3">
 					    <h5 class="card-title btn btn-danger">Website Icons</h5>
-					    <p class="card-text">Created a website Icons using the latest technology and trend (HTML 5, CSS 3, Javascript, etc.)</p>
+					    <p class="card-text text-dark">Created a website Icons using the latest technology and trend.</p>
 					  </div>
 					</div>
 					</a>
@@ -177,7 +177,7 @@
 					  <a class="text-decoration-none text-info" href="" target="_blank">
 					  <div class="card-body mb-2 mb-lg-3">
 					    <h5 class="card-title btn btn-danger">Graphic Design Projects</h5>
-					    <p class="card-text text-justify">Created a logo design, brochure, banner, and social media publication materials for different businesses.</p>
+					    <p class="card-text text-dark">Created a logo design, brochure, banner, and social media publication materials for different businesses.</p>
 					  </div>
 					</div>
 					</a>
@@ -212,7 +212,7 @@
 					  <a class="text-decoration-none text-info" href="" target="_blank">
 					  <div class="card-body mb-2 mb-lg-3">
 					    <h5 class="card-title btn btn-danger">Creative Icons </h5> 
-					    <p class="card-text text-justify">Created a Creative Icons using the latest technology and trend (HTML 5, CSS 3, Javascript, etc.)).</p>
+					    <p class="card-text text-dark">Created a Creative Icons using the latest technology and trend.</p>
 					  </div>
 					</div>
 					</a>
@@ -352,7 +352,7 @@
 				<div class="col-12 col-md-12 col-lg-4 col order-3 my-auto d-none d-xl-block">
 					<ul class="nav justify-content-end">
 						<li class="nav-item">
-							<a href="#contact" class="text-light nav-link">Any Question? Message us!</a>
+							<a href="#contact" class="text-light nav-link">Any Questions? Message us!</a>
 						</li>
 
 					</ul>
