Update Folder Structure

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 					  </div>
 
 					  <!-- Card Body -->
-					  <a class="text-decoration-none text-info" href="" target="_blank">
+					  <a class="text-decoration-none text-info" href="file:///C:/Users/User/Documents/batch203/capstone1/project/index.html" target="_blank">
 					  <div class="card-body mb-2 mb-lg-3">
 					    <h5 class="card-title btn btn-danger">Website Icons</h5>
 					    <p class="card-text text-dark">Created a website Icons using the latest technology and trend.</p>
@@ -174,7 +174,7 @@
 					    </button>
 					  </div>
 
-					  <a class="text-decoration-none text-info" href="" target="_blank">
+					  <a class="text-decoration-none text-info" href="file:///C:/Users/User/Documents/batch203/capstone1/project/index.html" target="_blank">
 					  <div class="card-body mb-2 mb-lg-3">
 					    <h5 class="card-title btn btn-danger">Graphic Design Projects</h5>
 					    <p class="card-text text-dark">Created a logo design, brochure, banner, and social media publication materials for different businesses.</p>
@@ -209,7 +209,7 @@
 					    </button>
 					  </div>
 
-					  <a class="text-decoration-none text-info" href="" target="_blank">
+					  <a class="text-decoration-none text-info" href="file:///C:/Users/User/Documents/batch203/capstone1/project/index.html" target="_blank">
 					  <div class="card-body mb-2 mb-lg-3">
 					    <h5 class="card-title btn btn-danger">Creative Icons </h5> 
 					    <p class="card-text text-dark">Created a Creative Icons using the latest technology and trend.</p>
