--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
 						<a href="#projects" class="text-bold nav-link rounded-0 d-inline-block">Projects</a>
 					</li>
 					<li class="nav-item text-center">
+						<a href="#contact" class="text-bold nav-link rounded-0 d-inline-block">Tools</a>
+					</li>
+					</li>
+					<li class="nav-item text-center">
 						<a href="#contact" class="text-bold nav-link rounded-0 d-inline-block">Contact</a>
 					</li>
 
