Update Folder Structure

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<body data-spy="scroll" data-target="#navBtn" data-offset="50">
 		<!-- Navbar -->
 		<nav class="navbar navbar-expand-lg navbar-dark fixed-top parallax fadein">
-			<a href="#home" class="navbar-brand text-dark ">
+			<a href="#home" class="navbar-brand text-dark bg-light ">
 				<img class="img-fluid rounded-circle" width="40px" src="https://cdn.pixabay.com/photo/2017/03/16/21/18/logo-2150297_960_720.png" alt="">
 				<span class="font-weight-light d-none d-xl-inline">LJ</span> <span class="font-weight-bold d-none d-xl-inline">iCons
 				</span>
@@ -149,7 +149,7 @@
 					</a>
 				</div>
 
-				<!-- Graphic Design -->
+				<!-- Graphic Icon -->
 				<div class="col-12 col-lg-4 align-self-center">
 					<div class="card mb-3">
 						<!-- Carousel -->
@@ -184,7 +184,7 @@
 					</a>
 				</div>
 
-				<!-- Social Media Mangement -->
+				<!-- Creative Icons -->
 				<div class="col-12 col-lg-4 align-self-center">
 					<div class="card mb-3">
 						<!-- Carousel -->
@@ -222,15 +222,14 @@
 
 			<!-- Contact -->
 			<section class="row px-2 px-lg-5 my-5" id="contact">
-				<div class="col-12 align-self-end text-dark text-center bg-dark">
+				<div class="col-12 align-self-end text-dark text-center">
 					<h1 class="display-4 my-3 my-lg-5 py-lg-2">LET'S WORK US TOGETHER!</h1>
 				</div>
 
 				<!-- Contact Form with HTML Validation -->
 				<div class="col-12 col-lg-6">
 					<form onsubmit="$('#thankyou').modal('show')" class="p-3">
-
-						<!-- Fullname -->
+					<!-- Fullname -->
 					  <div class="form-group">
 					    <label for="full_name" class="text-dark">Name</label>
 					    <input type="text" class="form-control" id="full_name" placeholder="Your Name" required>
