Update Folder Structure

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 			<!-- Contact -->
 			<section class="row px-2 px-lg-5 my-5" id="contact">
 				<div class="col-12 align-self-end text-dark text-center">
-					<h1 class="display-4 my-3 my-lg-5 py-lg-2">LET'S WORK US TOGETHER!</h1>
+					<h1 class="display-4 my-3 my-lg-5 py-lg-2">LET'S WORK TOGETHER!</h1>
 				</div>
 
 				<!-- Contact Form with HTML Validation -->
