--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
 			</div>
 		</footer>
 
-    <script src="..\app.js>"></script>
+    <script src="app.js>"></script>
 	</body>
 
 	<!-- Bootstrap JS -->
