--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 					<!-- About Me Text -->
 					<h1 class="display-3 mb-xl-5 d-inline-block border-bottom">ABOUT ME</h1>
 
-					<img src="https://scontent.fmnl13-2.fna.fbcdn.net/v/t31.18172-8/1519832_10201379039917956_8266969761302060878_o.jpg?_nc_cat=108&ccb=1-7&_nc_sid=a83260&_nc_eui2=AeE0IFs1zfgml3Nx3Me7BMplblYTvGYs83puVhO8ZizzepCZtyi5XJwjIsQDPbdJdrxGC7_7eKVNZ-UunY5rDlnh&_nc_ohc=iD_RwX9slOkAX8ZEpPx&_nc_ht=scontent.fmnl13-2.fna&oh=00_AfCLJ6Ui6uTCbXUZ9-RgFfjTYkiREJ8htQhkzShvtbJI_Q&oe=63CC00C4" class="img-fluid d-block d-none d-lg-block d-xl-none my-lg-3 mx-auto my-5">
+					<img src="https://scontent.fmnl9-4.fna.fbcdn.net/v/t31.18172-8/1519832_10201379039917956_8266969761302060878_o.jpg?_nc_cat=108&cb=99be929b-59f725be&ccb=1-7&_nc_sid=a83260&_nc_eui2=AeE0IFs1zfgml3Nx3Me7BMplblYTvGYs83puVhO8ZizzepCZtyi5XJwjIsQDPbdJdrxGC7_7eKVNZ-UunY5rDlnh&_nc_ohc=QMStqUa8Q8wAX--IFbk&_nc_ht=scontent.fmnl9-4.fna&oh=00_AfBHR8Fo6M7Ro91gG0S_hjI4Bfy9ryPLQIAWb6Mfsl8rIg&oe=64FCC384" class="img-fluid d-block d-none d-lg-block d-xl-none my-lg-3 mx-auto my-5">
 
 					<p class="lead font-italic text-justify">
 						A <span class="font-weight-bold">Creative, Motivated and Professional Freelancer?</span>
