--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 				<!-- Professional Photo auto Hides for Small Screen -->
 				<div class="col-12 col-xl-6 text-center align-self-end d-none d-xl-block">
-					<img src="https://scontent.fmnl9-4.fna.fbcdn.net/v/t31.18172-8/1519832_10201379039917956_8266969761302060878_o.jpg?_nc_cat=108&cb=99be929b-59f725be&ccb=1-7&_nc_sid=a83260&_nc_eui2=AeE0IFs1zfgml3Nx3Me7BMplblYTvGYs83puVhO8ZizzepCZtyi5XJwjIsQDPbdJdrxGC7_7eKVNZ-UunY5rDlnh&_nc_ohc=QMStqUa8Q8wAX--IFbk&_nc_ht=scontent.fmnl9-4.fna&oh=00_AfBHR8Fo6M7Ro91gG0S_hjI4Bfy9ryPLQIAWb6Mfsl8rIg&oe=64FCC384" class="img-fluid" width="500px">
+					<img src="https://scontent.fmnl9-4.fna.fbcdn.net/v/t31.18172-8/1519832_10201379039917956_8266969761302060878_o.jpg?_nc_cat=108&ccb=1-7&_nc_sid=5f2048&_nc_eui2=AeE0IFs1zfgml3Nx3Me7BMplblYTvGYs83puVhO8ZizzepCZtyi5XJwjIsQDPbdJdrxGC7_7eKVNZ-UunY5rDlnh&_nc_ohc=MgQUT4lnp88Ab6cF3-5&_nc_ht=scontent.fmnl9-4.fna&oh=00_AfAL_9cGD5zW8yQqXrnbfrpFBHZEzBCt003xp5s_lB3eHg&oe=663A7D04" class="img-fluid" width="500px">
 				</div>
 
 				<div class="col-12 col-xl-6 align-self-center">
@@ -86,7 +86,7 @@
 					<!-- About Me Text -->
 					<h1 class="display-3 mb-xl-5 d-inline-block border-bottom">ABOUT ME</h1>
 
-					<img src="https://scontent.fmnl9-4.fna.fbcdn.net/v/t31.18172-8/1519832_10201379039917956_8266969761302060878_o.jpg?_nc_cat=108&cb=99be929b-59f725be&ccb=1-7&_nc_sid=a83260&_nc_eui2=AeE0IFs1zfgml3Nx3Me7BMplblYTvGYs83puVhO8ZizzepCZtyi5XJwjIsQDPbdJdrxGC7_7eKVNZ-UunY5rDlnh&_nc_ohc=QMStqUa8Q8wAX--IFbk&_nc_ht=scontent.fmnl9-4.fna&oh=00_AfBHR8Fo6M7Ro91gG0S_hjI4Bfy9ryPLQIAWb6Mfsl8rIg&oe=64FCC384" class="img-fluid d-block d-none d-lg-block d-xl-none my-lg-3 mx-auto my-5">
+					<img src="https://scontent.fmnl9-4.fna.fbcdn.net/v/t31.18172-8/1519832_10201379039917956_8266969761302060878_o.jpg?_nc_cat=108&ccb=1-7&_nc_sid=5f2048&_nc_eui2=AeE0IFs1zfgml3Nx3Me7BMplblYTvGYs83puVhO8ZizzepCZtyi5XJwjIsQDPbdJdrxGC7_7eKVNZ-UunY5rDlnh&_nc_ohc=MgQUT4lnp88Ab6cF3-5&_nc_ht=scontent.fmnl9-4.fna&oh=00_AfAL_9cGD5zW8yQqXrnbfrpFBHZEzBCt003xp5s_lB3eHg&oe=663A7D04" class="img-fluid d-block d-none d-lg-block d-xl-none my-lg-3 mx-auto my-5">
 
 					<p class="lead font-italic text-justify">
 						A <span class="font-weight-bold">Creative, Motivated and Professional Freelancer?</span>
@@ -98,10 +98,10 @@
 						If we work together, I'm the one who answers the phone, handles the work, and stays focused on your projects.
 					</p>
 					<p class="lead text-justify">
-						Let’s make it happen! Hire me and let me help you bring success to your company.
+						Let’s make it happen! Hire me, and let me help you bring success to your company.
 					</p>
 					<p class="lead text-justify">
-						<span class="font-weight-bold">I am looking forward to work with you.</span>
+						<span class="font-weight-bold">I am looking forward to working with you.</span>
 					</p>
 				</div>
 			</section>
